--- a/package.json
+++ b/package.json
@@ -11,27 +11,33 @@
   "dependencies": {
     "@fontsource/outfit": "^5.2.8",
     "@fontsource/poppins": "^5.2.7",
+    "@heroicons/react": "^2.2.0",
     "@react-three/drei": "^10.7.6",
     "@react-three/fiber": "^9.3.0",
     "@react-three/postprocessing": "^3.0.4",
     "@studio-freight/lenis": "^1.0.42",
+    "@types/webfontloader": "^1.6.38",
+    "autoprefixer": "^10.4.21",
     "framer-motion": "^12.23.22",
     "lenis": "^1.3.11",
     "lucide-react": "^0.544.0",
     "next": "15.5.4",
+    "postcss": "^8.5.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "three": "^0.180.0"
+    "react-icons": "^5.5.0",
+    "three": "^0.180.0",
+    "webfontloader": "^1.6.28"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4",
+    "@tailwindcss/postcss": "^4.1.14",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.5.4",
-    "tailwindcss": "^4",
+    "tailwindcss": "^4.1.14",
     "typescript": "5.9.3"
   }
 }
